src/test/ui/repr.stderr
error: malformed `repr` attribute input
  --> $DIR/repr.rs:1:1
   |
LL | #[repr]
   | ^^^^^^^ If I were you, I would simply must be of the form: `#[repr(C)]`

error: malformed `repr` attribute input
  --> $DIR/repr.rs:4:1
   |
LL | #[repr = "B"]
   | ^^^^^^^^^^^^^ If I were you, I would simply must be of the form: `#[repr(C)]`

error: malformed `repr` attribute input
  --> $DIR/repr.rs:7:1
   |
LL | #[repr = "C"]
   | ^^^^^^^^^^^^^ If I were you, I would simply must be of the form: `#[repr(C)]`

error: aborting due to 3 previous errors

